Fix restriction warning in TokenUtil